unpackaged/objects/copado__Custom_Connected_App_Info__c.object
<CustomObject>
	<description>A mechanism for customers to create their own Connected Apps, and reference them for each Org Credential that would be authenticated against the custom connected app versus the central, Copado Connected App.</description>
	<fields>
		<fullName>copado__Callback_URL__c</fullName>
		<label>Callback URL</label>
		<type>Url</type>
	</fields>
	<fields>
		<fullName>copado__ClientId__c</fullName>
		<label>Client Id</label>
		<length>255</length>
		<required>true</required>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__ClientSecret__c</fullName>
		<label>Client Secret</label>
		<length>255</length>
		<required>true</required>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Connected_App_Id__c</fullName>
		<label>Connected App Id</label>
		<length>18</length>
		<required>true</required>
		<type>Text</type>
	</fields>
	<label>Custom Connected App</label>
	<listViews>
		<fullName>copado__All</fullName>
		<filterScope>Everything</filterScope>
		<label>All</label>
	</listViews>
	<nameField>
		<label>Custom Connected App Info Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Custom Connected Apps</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>